[package]
name = "q_julia" # Changed to snake_case
version = "0.2.0"
edition = "2021"
description = "Quantum Fractal Generator - A Rust library for generating fractals with quantum-inspired algorithms."
authors = ["Ant OG <Reel0112358.13@proton.me>"]
license = "MIT"
repository = "https://github.com/LoQiseaking69/q_julia" # Changed repository URL to match the new name
documentation = "https://github.com/LoQiseaking69/q_julia/blob/main/README.md" # Changed documentation URL to match the new name

# Dependencies
[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
num-complex = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.0"
thiserror = "1.0"

# Library configuration
[lib]
crate-type = ["cdylib"]
path = "lib.rs"
