[package]
name = "q_julia"
version = "0.3.0"  # Updated version
edition = "2021"
description = "Quantum Fractal Generator - A Rust library for generating fractals with quantum-inspired algorithms."
authors = ["Ant OG <Reel0112358.13@proton.me>"]
license = "MIT"
repository = "https://github.com/LoQiseaking69/q_julia"
documentation = "https://github.com/LoQiseaking69/q_julia/blob/main/README.md"

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
num-complex = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
